
[project]
name = "ipyvuetable"
version = "0.7.18"
description = "Table widget for Jupyter Notebook and JupyterLab"
authors = [
  { name = "Gabriel Robin" }
]
urls = {"Homepage" = "https://github.com/gab23r/ipyvuetable"}
readme = "README.md"
license = { text = "MIT" }
dependencies = [
  "ipyvuetify",
  "polars"
]
requires-python = ">=3.10"

[dependency-groups]
dev = [
    "jupyterlab>=4.3.6",
    "ruff>=0.8.4",
]


[project.optional-dependencies]
ipyevents = ["ipyevents"]


[tool.hatch.build]
include = ["**/*.py", "custom.css"]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
